XMLExper/m12/m12_104_1_tinyxml2/comparisonS.txt
tinyxml2.cpp: In constructor ‘tinyxml2::XMLNode::XMLNode(tinyxml2::XMLDocument*)’:
tinyxml2.cpp:812:56: error: invalid conversion from ‘tinyxml2::XMLNode*’ to ‘tinyxml2::XMLDocument*’ [-fpermissive]
  812 |     _document( /*PCI*/dynamic_cast<tinyxml2::XMLNode*>(doc) ),
      |                                                        ^~~
      |                                                        |
      |                                                        tinyxml2::XMLNode*
diff: tinyxml2.S: No such file or directory
